# Navin

./: .eslintrc.json  .prettierignore  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.husky/: pre-commit
docs/: ARCHITECTURE.md
scripts/: check-css-lines.js  copy-icons.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  build_output.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_system.rs  lib.rs  main.rs  menu.rs
src-tauri/src/commands/: checklist_commands.rs  export_commands.rs  git_commands.rs  git_diff_commands.rs  git_history_commands.rs  git_remote_commands.rs  git_repository_commands.rs  git_staging_commands.rs  git_stash_commands.rs  git_state.rs  mod.rs  progress_commands.rs  project_commands.rs
src-tauri/src/core/: error.rs  git_branch_ops.rs  git_diff_helpers.rs  git_diff_operations.rs  git_engine.rs  git_engine_delegates.rs  git_error.rs  git_history_operations.rs  git_operations.rs  git_remote_operations.rs  git_stash_operations.rs  logging.rs  mod.rs  result.rs  validation.rs
src-tauri/src/database/: checklist_data.rs  checklist_data_part1.rs  checklist_data_part2.rs  migrations.rs  mod.rs  pool.rs  queries.rs  schema.rs  seeds.rs
src-tauri/src/models/: checklist.rs  git_repository.rs  mod.rs  quality_rules.rs
src-tauri/src/repositories/: checklist_repository.rs  checklist_update_ops.rs  checklist_write_ops.rs  helpers.rs  mod.rs  progress_repository.rs  project_repository.rs
(+244 files in other folders)
